[gd_scene load_steps=30 format=3 uid="uid://bq8mcfvfvpeof"]

[ext_resource type="Texture2D" uid="uid://r114exs72lxa" path="res://assets/sprites/iconSkills/enabled/crush_small.png" id="1_n0rm1"]
[ext_resource type="Script" uid="uid://3s1ase5ebu8y" path="res://scripts/skill_tree.gd" id="1_p21vy"]
[ext_resource type="Texture2D" uid="uid://dghtkunvw3bat" path="res://assets/sprites/iconSkills/disabled/disabled_crush_small.png" id="2_p21vy"]
[ext_resource type="Texture2D" uid="uid://b43beqkvltxwx" path="res://assets/sprites/iconSkills/enabled/double_yield.png" id="3_qredw"]
[ext_resource type="Texture2D" uid="uid://bf0ccmubcn462" path="res://assets/sprites/iconSkills/disabled/disabled_double_yield.png" id="4_jrpp7"]
[ext_resource type="Texture2D" uid="uid://ddfiuwr65w3nr" path="res://assets/sprites/iconSkills/enabled/double_damage.png" id="5_xlgbs"]
[ext_resource type="Texture2D" uid="uid://due4kccv8ui51" path="res://assets/sprites/iconSkills/disabled/disabled_double_damage.png" id="6_2gejb"]
[ext_resource type="Texture2D" uid="uid://cas5ud5rbwxno" path="res://assets/sprites/iconSkills/enabled/slow_asteroids.png" id="7_o5b3c"]
[ext_resource type="Texture2D" uid="uid://c0ktc45uovqrb" path="res://assets/sprites/iconSkills/disabled/disabled_slow_asteroids.png" id="8_mxcng"]
[ext_resource type="Texture2D" uid="uid://c45qra3pj86m3" path="res://assets/sprites/iconSkills/enabled/critical_hit.png" id="9_66wtt"]
[ext_resource type="Texture2D" uid="uid://dfqe8ushr7rgi" path="res://assets/sprites/iconSkills/disabled/disabled_critical_hit.png" id="10_5cnif"]
[ext_resource type="Texture2D" uid="uid://hxx4unxqgr3b" path="res://assets/sprites/iconSkills/enabled/binoculars.png" id="11_vnw36"]
[ext_resource type="Texture2D" uid="uid://cgrjysi251ye" path="res://assets/sprites/iconSkills/disabled/disabled_binoculars.png" id="12_6c6mu"]
[ext_resource type="Texture2D" uid="uid://btnwmg5wm6ke7" path="res://assets/sprites/iconSkills/enabled/beta.png" id="13_bqncm"]
[ext_resource type="Texture2D" uid="uid://ct56oy022kqh0" path="res://assets/sprites/iconSkills/enabled/soften_asteroids.png" id="14_5cnif"]
[ext_resource type="Texture2D" uid="uid://tpij6fhl2ijm" path="res://assets/sprites/iconSkills/disabled/disabled_beta.png" id="14_dp4hp"]
[ext_resource type="Texture2D" uid="uid://ddpns81c5tew6" path="res://assets/sprites/iconSkills/disabled/disabled_soften_asteroids.png" id="15_vnw36"]
[ext_resource type="Texture2D" uid="uid://d1afpnw47t30" path="res://assets/sprites/iconSkills/enabled/passive_starpoints.png" id="16_6c6mu"]
[ext_resource type="Texture2D" uid="uid://bb0lpnnoe574e" path="res://assets/sprites/iconSkills/disabled/disabled_passive_starpoints.png" id="17_bqncm"]
[ext_resource type="Texture2D" uid="uid://bssaep3i0wfnv" path="res://assets/sprites/iconSkills/enabled/overkill.png" id="18_dp4hp"]
[ext_resource type="Texture2D" uid="uid://bevpe7e1mpgt0" path="res://assets/sprites/iconSkills/disabled/disabled_overkill.png" id="19_lw871"]
[ext_resource type="Texture2D" uid="uid://s2ilirq6t66g" path="res://assets/sprites/iconSkills/enabled/life_steal.png" id="20_s0fa6"]
[ext_resource type="Texture2D" uid="uid://4mf0loxptaxo" path="res://assets/sprites/iconSkills/disabled/disabled_life_steal.png" id="21_huajd"]
[ext_resource type="Texture2D" uid="uid://xxdhwmrcv7gg" path="res://assets/sprites/iconSkills/enabled/delta.png" id="24_dp4hp"]
[ext_resource type="Texture2D" uid="uid://drxboivlk6cdp" path="res://assets/sprites/iconSkills/disabled/disabled_delta.png" id="25_lw871"]
[ext_resource type="Texture2D" uid="uid://bca7itk1w8gre" path="res://assets/sprites/iconSkills/enabled/gamma.png" id="26_s0fa6"]
[ext_resource type="Texture2D" uid="uid://d2sp0lvk0ryck" path="res://assets/sprites/iconSkills/disabled/disabled_gamma.png" id="27_huajd"]

[sub_resource type="Environment" id="Environment_dp4hp"]
background_mode = 3
glow_enabled = true
glow_blend_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_dp4hp"]

[node name="skill_tree" type="Node2D"]
script = ExtResource("1_p21vy")

[node name="tooltip" type="Label" parent="."]
top_level = true
z_index = 10
offset_right = 40.0
offset_bottom = 21.0
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Glow" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dp4hp")

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
anchors_preset = -1
anchor_left = 1.44444
anchor_top = 0.490385
anchor_right = 1.44444
anchor_bottom = 0.490385
offset_left = 1664.0
offset_top = -408.0
offset_right = 2240.0
offset_bottom = 424.0
color = Color(0.278431, 1, 1, 0.156863)
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
anchors_preset = -1
anchor_left = 1.44444
anchor_top = 0.490385
anchor_right = 1.44444
anchor_bottom = 0.490385
offset_left = 832.0
offset_top = -408.0
offset_right = 1408.0
offset_bottom = 424.0
color = Color(0.278431, 1, 1, 0.156863)
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_top = -408.0
offset_right = 576.0
offset_bottom = 424.0
color = Color(0.278431, 1, 1, 0.156863)
metadata/_edit_use_anchors_ = true

[node name="lyraLine" type="Line2D" parent="." groups=["lyra"]]
self_modulate = Color(1, 1, 3, 1)
material = SubResource("CanvasItemMaterial_dp4hp")
points = PackedVector2Array(62, 355, 143, 246, 379, 192, 442, -132, 531, -307, 352, -370, 455, -118, 194, -91, 147, 262)
width = 2.0

[node name="cepheusLine1" type="Line2D" parent="." groups=["cepheus"]]
self_modulate = Color(1, 1, 3, 1)
material = SubResource("CanvasItemMaterial_dp4hp")
points = PackedVector2Array(885, 301, 963, 375, 1030, 287, 911, -46, 996, -373, 1183, -131, 1206, 192, 1363, 279, 1249, 370)
width = 2.0

[node name="cepheusLine2" type="Line2D" parent="cepheusLine1" groups=["cepheus"]]
self_modulate = Color(1, 1, 3, 1)
material = SubResource("CanvasItemMaterial_dp4hp")
points = PackedVector2Array(1037, 289, 1200, 193)
width = 2.0

[node name="cepheusLine3" type="Line2D" parent="cepheusLine1/cepheusLine2" groups=["cepheus"]]
self_modulate = Color(1, 1, 3, 1)
material = SubResource("CanvasItemMaterial_dp4hp")
points = PackedVector2Array(917, -45, 1186, -130)
width = 2.0

[node name="perseusLine1" type="Line2D" parent="." groups=["perseus"]]
self_modulate = Color(1, 1, 3, 1)
material = SubResource("CanvasItemMaterial_dp4hp")
position = Vector2(0, 51)
points = PackedVector2Array(1928, 248, 1904, 120, 1792, 24, 1792, -88, 1728, -232, 1776, -352, 1880, -296, 1888, -160, 2072, 0, 2184, 56)
width = 2.0

[node name="perseusLine2" type="Line2D" parent="perseusLine1" groups=["perseus"]]
self_modulate = Color(1, 1, 3, 1)
material = SubResource("CanvasItemMaterial_dp4hp")
points = PackedVector2Array(1792, -80, 1904, -152)
width = 2.0

[node name="perseusLine3" type="Line2D" parent="perseusLine1/perseusLine2" groups=["perseus"]]
self_modulate = Color(1, 1, 3, 1)
material = SubResource("CanvasItemMaterial_dp4hp")
points = PackedVector2Array(1904, 120, 2072, 0)
width = 2.0

[node name="crush_small" type="TextureButton" parent="." groups=["lyra"]]
offset_left = 408.0
offset_top = -160.0
offset_right = 481.0
offset_bottom = -87.0
texture_normal = ExtResource("1_n0rm1")
texture_disabled = ExtResource("2_p21vy")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="starpoint_yield" type="TextureButton" parent="." groups=["lyra"]]
offset_left = 32.0
offset_top = 320.0
offset_right = 105.0
offset_bottom = 393.0
texture_normal = ExtResource("3_qredw")
texture_disabled = ExtResource("4_jrpp7")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="damage_output" type="TextureButton" parent="." groups=["lyra"]]
offset_left = 112.0
offset_top = 216.0
offset_right = 185.0
offset_bottom = 289.0
texture_normal = ExtResource("5_xlgbs")
texture_disabled = ExtResource("6_2gejb")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="slow_asteroids" type="TextureButton" parent="." groups=["lyra"]]
offset_left = 344.0
offset_top = 160.0
offset_right = 417.0
offset_bottom = 233.0
texture_normal = ExtResource("7_o5b3c")
texture_disabled = ExtResource("8_mxcng")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="critical_hit" type="TextureButton" parent="." groups=["lyra"]]
offset_left = 160.0
offset_top = -120.0
offset_right = 233.0
offset_bottom = -47.0
texture_normal = ExtResource("9_66wtt")
texture_disabled = ExtResource("10_5cnif")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="binoculars" type="TextureButton" parent="." groups=["lyra"]]
offset_left = 496.0
offset_top = -334.0
offset_right = 569.0
offset_bottom = -261.0
texture_normal = ExtResource("11_vnw36")
texture_disabled = ExtResource("12_6c6mu")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="beta" type="TextureButton" parent="." groups=["lyra"]]
offset_left = 320.0
offset_top = -400.0
offset_right = 393.0
offset_bottom = -327.0
texture_normal = ExtResource("13_bqncm")
texture_disabled = ExtResource("14_dp4hp")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="^^Lyra^^||vvCepheusvv" type="Panel" parent="."]
anchors_preset = -1
anchor_bottom = 2.192
offset_left = -440.0
offset_top = -327.0
offset_right = -400.0
offset_bottom = -287.0

[node name="soften_asteroids" type="TextureButton" parent="." groups=["cepheus"]]
offset_left = 1216.0
offset_top = 344.0
offset_right = 1289.0
offset_bottom = 417.0
texture_normal = ExtResource("14_5cnif")
texture_disabled = ExtResource("15_vnw36")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="passive_starpoints" type="TextureButton" parent="." groups=["cepheus"]]
offset_left = 1168.0
offset_top = 160.0
offset_right = 1241.0
offset_bottom = 233.0
texture_normal = ExtResource("16_6c6mu")
texture_disabled = ExtResource("17_bqncm")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="overkill" type="TextureButton" parent="." groups=["cepheus"]]
offset_left = 1152.0
offset_top = -160.0
offset_right = 1225.0
offset_bottom = -87.0
texture_normal = ExtResource("18_dp4hp")
texture_disabled = ExtResource("19_lw871")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="life_steal" type="TextureButton" parent="." groups=["cepheus"]]
offset_left = 880.0
offset_top = -80.0
offset_right = 953.0
offset_bottom = -7.0
texture_normal = ExtResource("20_s0fa6")
texture_disabled = ExtResource("21_huajd")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="gamma" type="TextureButton" parent="." groups=["cepheus"]]
offset_left = 952.0
offset_top = -400.0
offset_right = 1025.0
offset_bottom = -327.0
texture_normal = ExtResource("26_s0fa6")
texture_disabled = ExtResource("27_huajd")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="slow_asteroids2" type="TextureButton" parent="." groups=["cepheus"]]
offset_left = 848.0
offset_top = 264.0
offset_right = 921.0
offset_bottom = 337.0
texture_normal = ExtResource("7_o5b3c")
texture_disabled = ExtResource("8_mxcng")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="crush_small2" type="TextureButton" parent="." groups=["cepheus"]]
offset_left = 928.0
offset_top = 344.0
offset_right = 1001.0
offset_bottom = 417.0
texture_normal = ExtResource("1_n0rm1")
texture_disabled = ExtResource("2_p21vy")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="starpoint_yield2" type="TextureButton" parent="." groups=["cepheus"]]
offset_left = 1001.0
offset_top = 256.0
offset_right = 1074.0
offset_bottom = 329.0
texture_normal = ExtResource("3_qredw")
texture_disabled = ExtResource("4_jrpp7")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="passive_starpoints2" type="TextureButton" parent="." groups=["cepheus"]]
offset_left = 1320.0
offset_top = 240.0
offset_right = 1393.0
offset_bottom = 313.0
texture_normal = ExtResource("16_6c6mu")
texture_disabled = ExtResource("17_bqncm")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="^^Cepheus^^||vvPerseusvv2" type="Panel" parent="."]
anchors_preset = -1
anchor_bottom = 2.192
offset_left = -440.0
offset_top = -327.0
offset_right = -400.0
offset_bottom = -287.0

[node name="delta" type="TextureButton" parent="." groups=["perseus"]]
offset_left = 1744.0
offset_top = -341.0
offset_right = 1817.0
offset_bottom = -268.0
texture_normal = ExtResource("24_dp4hp")
texture_disabled = ExtResource("25_lw871")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="overkill2" type="TextureButton" parent="." groups=["perseus"]]
offset_left = 1848.0
offset_top = -274.0
offset_right = 1921.0
offset_bottom = -201.0
texture_normal = ExtResource("18_dp4hp")
texture_disabled = ExtResource("19_lw871")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="starpoint_yield3" type="TextureButton" parent="." groups=["perseus"]]
offset_left = 1896.0
offset_top = 267.0
offset_right = 1969.0
offset_bottom = 340.0
texture_normal = ExtResource("3_qredw")
texture_disabled = ExtResource("4_jrpp7")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="slow_asteroids3" type="TextureButton" parent="." groups=["cepheus", "perseus"]]
offset_left = 1872.0
offset_top = 139.0
offset_right = 1945.0
offset_bottom = 212.0
texture_normal = ExtResource("7_o5b3c")
texture_disabled = ExtResource("8_mxcng")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="starpoint_yield4" type="TextureButton" parent="." groups=["perseus"]]
offset_left = 2040.0
offset_top = 19.0
offset_right = 2113.0
offset_bottom = 92.0
texture_normal = ExtResource("3_qredw")
texture_disabled = ExtResource("4_jrpp7")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="passive_starpoints3" type="TextureButton" parent="." groups=["perseus"]]
offset_left = 2144.0
offset_top = 76.0
offset_right = 2217.0
offset_bottom = 149.0
texture_normal = ExtResource("16_6c6mu")
texture_disabled = ExtResource("17_bqncm")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="damage_output2" type="TextureButton" parent="." groups=["perseus"]]
offset_left = 1864.0
offset_top = -133.0
offset_right = 1937.0
offset_bottom = -60.0
texture_normal = ExtResource("5_xlgbs")
texture_disabled = ExtResource("6_2gejb")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="soften_asteroids2" type="TextureButton" parent="." groups=["perseus"]]
offset_left = 1760.0
offset_top = -61.0
offset_right = 1833.0
offset_bottom = 12.0
texture_normal = ExtResource("14_5cnif")
texture_disabled = ExtResource("15_vnw36")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="critical_hit2" type="TextureButton" parent="." groups=["perseus"]]
offset_left = 1760.0
offset_top = 35.0
offset_right = 1833.0
offset_bottom = 108.0
texture_normal = ExtResource("9_66wtt")
texture_disabled = ExtResource("10_5cnif")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="life_steal2" type="TextureButton" parent="." groups=["perseus"]]
offset_left = 1696.0
offset_top = -221.0
offset_right = 1769.0
offset_bottom = -148.0
texture_normal = ExtResource("20_s0fa6")
texture_disabled = ExtResource("21_huajd")
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="crush_small" to="." method="_on_button_mouse_entered" binds= ["crush_small"]]
[connection signal="mouse_exited" from="crush_small" to="." method="_on_button_mouse_exited" binds= ["crush_small"]]
[connection signal="pressed" from="crush_small" to="." method="_on_upgrade_button_pressed" binds= ["crush_small"]]
[connection signal="mouse_entered" from="starpoint_yield" to="." method="_on_button_mouse_entered" binds= ["starpoint_yield"]]
[connection signal="mouse_exited" from="starpoint_yield" to="." method="_on_button_mouse_exited" binds= ["starpoint_yield"]]
[connection signal="pressed" from="starpoint_yield" to="." method="_on_upgrade_button_pressed" binds= ["starpoint_yield"]]
[connection signal="mouse_entered" from="damage_output" to="." method="_on_button_mouse_entered" binds= ["damage_output"]]
[connection signal="mouse_exited" from="damage_output" to="." method="_on_button_mouse_exited" binds= ["damage_output"]]
[connection signal="pressed" from="damage_output" to="." method="_on_upgrade_button_pressed" binds= ["damage_output"]]
[connection signal="mouse_entered" from="slow_asteroids" to="." method="_on_button_mouse_entered" binds= ["slow_asteroids"]]
[connection signal="mouse_exited" from="slow_asteroids" to="." method="_on_button_mouse_exited" binds= ["slow_asteroids"]]
[connection signal="pressed" from="slow_asteroids" to="." method="_on_upgrade_button_pressed" binds= ["slow_asteroids"]]
[connection signal="mouse_entered" from="critical_hit" to="." method="_on_button_mouse_entered" binds= ["critical_hit"]]
[connection signal="mouse_exited" from="critical_hit" to="." method="_on_button_mouse_exited" binds= ["critical_hit"]]
[connection signal="pressed" from="critical_hit" to="." method="_on_upgrade_button_pressed" binds= ["critical_hit"]]
[connection signal="mouse_entered" from="binoculars" to="." method="_on_button_mouse_entered" binds= ["binoculars"]]
[connection signal="mouse_exited" from="binoculars" to="." method="_on_button_mouse_exited" binds= ["binoculars"]]
[connection signal="pressed" from="binoculars" to="." method="_on_upgrade_button_pressed" binds= ["binoculars"]]
[connection signal="mouse_entered" from="beta" to="." method="_on_button_mouse_entered" binds= ["beta"]]
[connection signal="mouse_exited" from="beta" to="." method="_on_button_mouse_exited" binds= ["beta"]]
[connection signal="pressed" from="beta" to="." method="_on_upgrade_button_pressed" binds= ["beta"]]
[connection signal="mouse_entered" from="soften_asteroids" to="." method="_on_button_mouse_entered" binds= ["soften_asteroids"]]
[connection signal="mouse_exited" from="soften_asteroids" to="." method="_on_button_mouse_exited" binds= ["soften_asteroids"]]
[connection signal="pressed" from="soften_asteroids" to="." method="_on_upgrade_button_pressed" binds= ["soften_asteroids"]]
[connection signal="mouse_entered" from="passive_starpoints" to="." method="_on_button_mouse_entered" binds= ["passive_starpoints"]]
[connection signal="mouse_exited" from="passive_starpoints" to="." method="_on_button_mouse_exited" binds= ["passive_starpoints"]]
[connection signal="pressed" from="passive_starpoints" to="." method="_on_upgrade_button_pressed" binds= ["passive_starpoints"]]
[connection signal="mouse_entered" from="overkill" to="." method="_on_button_mouse_entered" binds= ["overkill"]]
[connection signal="mouse_exited" from="overkill" to="." method="_on_button_mouse_exited" binds= ["overkill"]]
[connection signal="pressed" from="overkill" to="." method="_on_upgrade_button_pressed" binds= ["overkill"]]
[connection signal="mouse_entered" from="life_steal" to="." method="_on_button_mouse_entered" binds= ["life_steal"]]
[connection signal="mouse_exited" from="life_steal" to="." method="_on_button_mouse_exited" binds= ["life_steal"]]
[connection signal="pressed" from="life_steal" to="." method="_on_upgrade_button_pressed" binds= ["life_steal"]]
[connection signal="mouse_entered" from="gamma" to="." method="_on_button_mouse_entered" binds= ["gamma"]]
[connection signal="mouse_exited" from="gamma" to="." method="_on_button_mouse_exited" binds= ["gamma"]]
[connection signal="pressed" from="gamma" to="." method="_on_upgrade_button_pressed" binds= ["gamma"]]
[connection signal="mouse_entered" from="slow_asteroids2" to="." method="_on_button_mouse_entered" binds= ["slow_asteroids2"]]
[connection signal="mouse_exited" from="slow_asteroids2" to="." method="_on_button_mouse_exited" binds= ["slow_asteroids2"]]
[connection signal="pressed" from="slow_asteroids2" to="." method="_on_upgrade_button_pressed" binds= ["slow_asteroids2"]]
[connection signal="mouse_entered" from="crush_small2" to="." method="_on_button_mouse_entered" binds= ["crush_small2"]]
[connection signal="mouse_exited" from="crush_small2" to="." method="_on_button_mouse_exited" binds= ["crush_small2"]]
[connection signal="pressed" from="crush_small2" to="." method="_on_upgrade_button_pressed" binds= ["crush_small2"]]
[connection signal="mouse_entered" from="starpoint_yield2" to="." method="_on_button_mouse_entered" binds= ["starpoint_yield2"]]
[connection signal="mouse_exited" from="starpoint_yield2" to="." method="_on_button_mouse_exited" binds= ["starpoint_yield2"]]
[connection signal="pressed" from="starpoint_yield2" to="." method="_on_upgrade_button_pressed" binds= ["starpoint_yield2"]]
[connection signal="mouse_entered" from="passive_starpoints2" to="." method="_on_button_mouse_entered" binds= ["passive_starpoints2"]]
[connection signal="mouse_exited" from="passive_starpoints2" to="." method="_on_button_mouse_exited" binds= ["passive_starpoints2"]]
[connection signal="pressed" from="passive_starpoints2" to="." method="_on_upgrade_button_pressed" binds= ["passive_starpoints2"]]
[connection signal="mouse_entered" from="delta" to="." method="_on_button_mouse_entered" binds= ["delta"]]
[connection signal="mouse_exited" from="delta" to="." method="_on_button_mouse_exited" binds= ["delta"]]
[connection signal="pressed" from="delta" to="." method="_on_upgrade_button_pressed" binds= ["delta"]]
[connection signal="mouse_entered" from="overkill2" to="." method="_on_button_mouse_entered" binds= ["overkill2"]]
[connection signal="mouse_exited" from="overkill2" to="." method="_on_button_mouse_exited" binds= ["overkill2"]]
[connection signal="pressed" from="overkill2" to="." method="_on_upgrade_button_pressed" binds= ["overkill2"]]
[connection signal="mouse_entered" from="starpoint_yield3" to="." method="_on_button_mouse_entered" binds= ["starpoint_yield3"]]
[connection signal="mouse_exited" from="starpoint_yield3" to="." method="_on_button_mouse_exited" binds= ["starpoint_yield3"]]
[connection signal="pressed" from="starpoint_yield3" to="." method="_on_upgrade_button_pressed" binds= ["starpoint_yield3"]]
[connection signal="mouse_entered" from="slow_asteroids3" to="." method="_on_button_mouse_entered" binds= ["slow_asteroids3"]]
[connection signal="mouse_exited" from="slow_asteroids3" to="." method="_on_button_mouse_exited" binds= ["slow_asteroids3"]]
[connection signal="pressed" from="slow_asteroids3" to="." method="_on_upgrade_button_pressed" binds= ["slow_asteroids3"]]
[connection signal="mouse_entered" from="starpoint_yield4" to="." method="_on_button_mouse_entered" binds= ["starpoint_yield4"]]
[connection signal="mouse_exited" from="starpoint_yield4" to="." method="_on_button_mouse_exited" binds= ["starpoint_yield4"]]
[connection signal="pressed" from="starpoint_yield4" to="." method="_on_upgrade_button_pressed" binds= ["starpoint_yield4"]]
[connection signal="mouse_entered" from="passive_starpoints3" to="." method="_on_button_mouse_entered" binds= ["passive_starpoints3"]]
[connection signal="mouse_exited" from="passive_starpoints3" to="." method="_on_button_mouse_exited" binds= ["passive_starpoints3"]]
[connection signal="pressed" from="passive_starpoints3" to="." method="_on_upgrade_button_pressed" binds= ["passive_starpoints3"]]
[connection signal="mouse_entered" from="damage_output2" to="." method="_on_button_mouse_entered" binds= ["damage_output2"]]
[connection signal="mouse_exited" from="damage_output2" to="." method="_on_button_mouse_exited" binds= ["damage_output2"]]
[connection signal="pressed" from="damage_output2" to="." method="_on_upgrade_button_pressed" binds= ["damage_output2"]]
[connection signal="mouse_entered" from="soften_asteroids2" to="." method="_on_button_mouse_entered" binds= ["soften_asteroids2"]]
[connection signal="mouse_exited" from="soften_asteroids2" to="." method="_on_button_mouse_exited" binds= ["soften_asteroids2"]]
[connection signal="pressed" from="soften_asteroids2" to="." method="_on_upgrade_button_pressed" binds= ["soften_asteroids2"]]
[connection signal="mouse_entered" from="critical_hit2" to="." method="_on_button_mouse_entered" binds= ["critical_hit2"]]
[connection signal="mouse_exited" from="critical_hit2" to="." method="_on_button_mouse_exited" binds= ["critical_hit2"]]
[connection signal="pressed" from="critical_hit2" to="." method="_on_upgrade_button_pressed" binds= ["critical_hit2"]]
[connection signal="mouse_entered" from="life_steal2" to="." method="_on_button_mouse_entered" binds= ["life_steal2"]]
[connection signal="mouse_exited" from="life_steal2" to="." method="_on_button_mouse_exited" binds= ["life_steal2"]]
[connection signal="pressed" from="life_steal2" to="." method="_on_upgrade_button_pressed" binds= ["life_steal2"]]
